scripts/nullaway/wpi/urldf54784279_tonyj321_Root_Play_tgz-pJ8-hep_io_root_output_demo_HistogramDemoJ8.txt
../wpi/urldf54784279_tonyj321_Root_Play_tgz-pJ8-hep_io_root_output_demo_HistogramDemoJ8/src/hep/io/root/output/StreamerClassInfo.java:39: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.javaClass = c;
                       ^
    (see http://t.uber.com/nullaway )
../wpi/urldf54784279_tonyj321_Root_Play_tgz-pJ8-hep_io_root_output_demo_HistogramDemoJ8/src/hep/io/root/output/StreamerClassInfo.java:40: error: [NullAway] dereferenced expression c is @Nullable
        this.classDef = (ClassDef) c.getAnnotation(ClassDef.class);
                                    ^
    (see http://t.uber.com/nullaway )
../wpi/urldf54784279_tonyj321_Root_Play_tgz-pJ8-hep_io_root_output_demo_HistogramDemoJ8/src/hep/io/root/output/StreamerFieldInfo.java:49: error: [NullAway] assigning @Nullable expression to @NonNull field
        counter = counterAnnotation == null ? null : counterAnnotation.value();
                ^
    (see http://t.uber.com/nullaway )
../wpi/urldf54784279_tonyj321_Root_Play_tgz-pJ8-hep_io_root_output_demo_HistogramDemoJ8/src/hep/io/root/output/Type.java:88: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.typeName = typeName;
                      ^
    (see http://t.uber.com/nullaway )
../wpi/urldf54784279_tonyj321_Root_Play_tgz-pJ8-hep_io_root_output_demo_HistogramDemoJ8/src/hep/io/root/output/Type.java:126: error: [NullAway] dereferenced expression c is @Nullable
        if (c.isEnum()) {
             ^
    (see http://t.uber.com/nullaway )
../wpi/urldf54784279_tonyj321_Root_Play_tgz-pJ8-hep_io_root_output_demo_HistogramDemoJ8/src/hep/io/root/output/TDirectory.java:57: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.parent = parent;
                    ^
    (see http://t.uber.com/nullaway )
../wpi/urldf54784279_tonyj321_Root_Play_tgz-pJ8-hep_io_root_output_demo_HistogramDemoJ8/src/hep/io/root/output/TKey.java:59: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.seekPDir = seekPDir;
                      ^
    (see http://t.uber.com/nullaway )
../wpi/urldf54784279_tonyj321_Root_Play_tgz-pJ8-hep_io_root_output_demo_HistogramDemoJ8/src/hep/io/root/output/TStreamerBasicPointer.java:21: error: [NullAway] assigning @Nullable expression to @NonNull field
        fCountName = field.getCountName();
                   ^
    (see http://t.uber.com/nullaway )
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
8 errors
